# rusticate

./: Cargo.toml  Makefile  README.md
python/: bezier.py
src/: lib.rs  main.rs
