[package]
name = "rusticate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"
piston_window = "0.123.0"
vecmath = "1.0.0"
image = "0.24.1"